GPC/tests/examples/pass/nonExistantObject2.gpc


int GPRM::Test::nonExistantObject2() {
    
    obj.m1(); 
    return 0;
}
