GPC/tests/examples/fail/errArith9.gpc

void errArith9() {
    return 3 & 3.0;
}


